--- a/resources/testing output.ipynb
+++ b/resources/testing output.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -50,52 +50,68 @@
       "+-----+---------------+\n",
       "\n",
       "> Generation # 1\n",
-      "['1', 0.5, 1, 'INFO,XC2,R2,Ens2,Se5, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R1,Ens2,Se2, INFO,XC3,R2,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['2', 0.333, 2, 'INFO,XC2,R2,Ens2,Se4, INFO,XC3,R2,Ens3,Se3, INFO,XC2,R3,Ens2,Se4, INFO,XC3,R2,Ens3,Se1, ST,XC1,R1,Ens1,Se5']\n",
-      "['3', 0.333, 2, 'INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se5, INFO,XC2,R3,Ens2,Se3, INFO,XC3,R2,Ens3,Se2, ST,XC1,R2,Ens1,Se2']\n",
-      "['4', 0.25, 3, 'INFO,XC2,R1,Ens2,Se5, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R3,Ens2,Se1, INFO,XC3,R3,Ens3,Se5, ST,XC1,R2,Ens1,Se1']\n",
-      "['5', 0.25, 3, 'INFO,XC2,R3,Ens2,Se2, INFO,XC3,R1,Ens3,Se4, INFO,XC2,R3,Ens2,Se1, INFO,XC3,R1,Ens3,Se1, ST,XC1,R3,Ens1,Se5']\n",
-      "['6', 0.2, 4, 'INFO,XC2,R3,Ens2,Se5, INFO,XC3,R2,Ens3,Se2, INFO,XC2,R1,Ens2,Se1, INFO,XC3,R3,Ens3,Se2, ST,XC1,R3,Ens1,Se2']\n",
-      "['7', 0.167, 5, 'INFO,XC2,R1,Ens2,Se3, INFO,XC3,R1,Ens3,Se4, INFO,XC2,R1,Ens2,Se5, INFO,XC3,R1,Ens3,Se1, ST,XC1,R3,Ens1,Se3']\n",
-      "['8', 0.167, 5, 'INFO,XC2,R2,Ens2,Se1, INFO,XC3,R1,Ens3,Se5, INFO,XC2,R1,Ens2,Se4, INFO,XC3,R1,Ens3,Se1, ST,XC1,R1,Ens1,Se5']\n",
-      "['9', 0.125, 7, 'INFO,XC2,R1,Ens2,Se2, INFO,XC3,R1,Ens3,Se5, INFO,XC2,R1,Ens2,Se2, INFO,XC3,R2,Ens3,Se5, ST,XC1,R3,Ens1,Se2']\n",
-      "['1', 'INFO', 'cryptography (XC2, 30)', 'R2 (45)', 'Mr Nahal (Ens2)', '14h15-15h50 (Se5)']\n",
-      "['2', 'INFO', 'analyse (XC3, 30)', 'R3 (35)', 'Mme Arroussi (Ens3)', '14h15-15h50 (Se5)']\n",
-      "['3', 'INFO', 'cryptography (XC2, 30)', 'R1 (25)', 'Mr Nahal (Ens2)', '9h:35-11h00 (Se2)']\n",
-      "['4', 'INFO', 'analyse (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '9h:35-11h00 (Se2)']\n",
-      "['5', 'ST', 'algorithme (XC1, 40)', 'R2 (45)', 'Mr Cherif Zahar (Ens1)', '11h:05-12h:45 (Se3)']\n",
+      "['1', 0.333, 2, 'INFO,XC2,R2,Ens2,Se3, INFO,XC3,R2,Ens3,Se3, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R2,Ens3,Se5, ST,XC1,R1,Ens1,Se3']\n",
+      "['2', 0.333, 2, 'INFO,XC2,R3,Ens2,Se5, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R1,Ens2,Se2, INFO,XC3,R3,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
+      "['3', 0.333, 2, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R2,Ens3,Se5, INFO,XC2,R1,Ens2,Se4, INFO,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se1']\n",
+      "['4', 0.333, 2, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R2,Ens3,Se2, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
+      "['5', 0.333, 2, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se4, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R3,Ens3,Se4, ST,XC1,R2,Ens1,Se2']\n",
+      "['6', 0.167, 5, 'INFO,XC2,R3,Ens2,Se1, INFO,XC3,R1,Ens3,Se4, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R3,Ens3,Se1, ST,XC1,R3,Ens1,Se1']\n",
+      "['7', 0.167, 5, 'INFO,XC2,R1,Ens2,Se2, INFO,XC3,R1,Ens3,Se4, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R2,Ens3,Se4, ST,XC1,R3,Ens1,Se3']\n",
+      "['8', 0.167, 5, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R1,Ens3,Se3, INFO,XC2,R2,Ens2,Se3, INFO,XC3,R3,Ens3,Se3, ST,XC1,R3,Ens1,Se4']\n",
+      "['9', 0.125, 7, 'INFO,XC2,R2,Ens2,Se3, INFO,XC3,R1,Ens3,Se5, INFO,XC2,R1,Ens2,Se2, INFO,XC3,R1,Ens3,Se5, ST,XC1,R1,Ens1,Se2']\n",
+      "['1', 'INFO', 'cryptography (XC2, 30)', 'R2 (45)', 'Mr Nahal (Ens2)', '11h:05-12h:45 (Se3)']\n",
+      "['2', 'INFO', 'analyse (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '11h:05-12h:45 (Se3)']\n",
+      "['3', 'INFO', 'cryptography (XC2, 30)', 'R2 (45)', 'Mr Nahal (Ens2)', '8h:00-9h:30 (Se1)']\n",
+      "['4', 'INFO', 'analyse (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '14h15-15h50 (Se5)']\n",
+      "['5', 'ST', 'algorithme (XC1, 40)', 'R1 (25)', 'Mr Cherif Zahar (Ens1)', '11h:05-12h:45 (Se3)']\n",
       "\n",
       "> Generation # 2\n",
-      "['1', 0.5, 1, 'INFO,XC2,R2,Ens2,Se5, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R1,Ens2,Se2, INFO,XC3,R2,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['2', 0.5, 1, 'INFO,XC2,R2,Ens2,Se5, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R1,Ens2,Se2, INFO,XC3,R2,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['3', 0.333, 2, 'INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se5, INFO,XC2,R3,Ens2,Se3, INFO,XC3,R2,Ens3,Se2, ST,XC1,R2,Ens1,Se2']\n",
-      "['4', 0.25, 3, 'INFO,XC2,R2,Ens2,Se4, INFO,XC3,R2,Ens3,Se3, INFO,XC2,R3,Ens2,Se4, INFO,XC3,R2,Ens3,Se1, ST,XC1,R3,Ens1,Se4']\n",
-      "['5', 0.25, 3, 'INFO,XC2,R1,Ens2,Se5, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, ST,XC1,R2,Ens1,Se1']\n",
-      "['6', 0.2, 4, 'INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se4, INFO,XC2,R3,Ens2,Se4, INFO,XC3,R2,Ens3,Se1, ST,XC1,R1,Ens1,Se4']\n",
-      "['7', 0.2, 4, 'INFO,XC2,R1,Ens2,Se3, INFO,XC3,R1,Ens3,Se5, INFO,XC2,R3,Ens2,Se3, INFO,XC3,R2,Ens3,Se2, ST,XC1,R2,Ens1,Se2']\n",
-      "['8', 0.167, 5, 'INFO,XC2,R2,Ens2,Se1, INFO,XC3,R1,Ens3,Se5, INFO,XC2,R1,Ens2,Se4, INFO,XC3,R1,Ens3,Se1, ST,XC1,R1,Ens1,Se5']\n",
-      "['9', 0.143, 6, 'INFO,XC2,R2,Ens2,Se4, INFO,XC3,R3,Ens3,Se2, INFO,XC2,R1,Ens2,Se1, INFO,XC3,R3,Ens3,Se2, ST,XC1,R3,Ens1,Se2']\n",
-      "['1', 'INFO', 'cryptography (XC2, 30)', 'R2 (45)', 'Mr Nahal (Ens2)', '14h15-15h50 (Se5)']\n",
+      "['1', 0.5, 1, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
+      "['2', 0.5, 1, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R2,Ens3,Se3, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R2,Ens3,Se5, ST,XC1,R2,Ens1,Se3']\n",
+      "['3', 0.5, 1, 'INFO,XC2,R2,Ens2,Se4, INFO,XC3,R2,Ens3,Se5, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
+      "['4', 0.333, 2, 'INFO,XC2,R2,Ens2,Se3, INFO,XC3,R2,Ens3,Se3, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R2,Ens3,Se5, ST,XC1,R1,Ens1,Se3']\n",
+      "['5', 0.333, 2, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se4, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R3,Ens3,Se4, ST,XC1,R2,Ens1,Se2']\n",
+      "['6', 0.333, 2, 'INFO,XC2,R3,Ens2,Se5, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R1,Ens2,Se4, INFO,XC3,R3,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
+      "['7', 0.25, 3, 'INFO,XC2,R2,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R1,Ens2,Se2, INFO,XC3,R2,Ens3,Se5, ST,XC1,R1,Ens1,Se3']\n",
+      "['8', 0.2, 4, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R2,Ens3,Se2, INFO,XC2,R2,Ens2,Se3, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
+      "['9', 0.167, 5, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R1,Ens3,Se3, INFO,XC2,R2,Ens2,Se3, INFO,XC3,R3,Ens3,Se3, ST,XC1,R3,Ens1,Se4']\n",
+      "['1', 'INFO', 'cryptography (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '11h:05-12h:45 (Se3)']\n",
       "['2', 'INFO', 'analyse (XC3, 30)', 'R3 (35)', 'Mme Arroussi (Ens3)', '14h15-15h50 (Se5)']\n",
-      "['3', 'INFO', 'cryptography (XC2, 30)', 'R1 (25)', 'Mr Nahal (Ens2)', '9h:35-11h00 (Se2)']\n",
-      "['4', 'INFO', 'analyse (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '9h:35-11h00 (Se2)']\n",
+      "['3', 'INFO', 'cryptography (XC2, 30)', 'R2 (45)', 'Mr Nahal (Ens2)', '13h:00-14h15 (Se4)']\n",
+      "['4', 'INFO', 'analyse (XC3, 30)', 'R1 (25)', 'Mme Arroussi (Ens3)', '9h:35-11h00 (Se2)']\n",
       "['5', 'ST', 'algorithme (XC1, 40)', 'R2 (45)', 'Mr Cherif Zahar (Ens1)', '11h:05-12h:45 (Se3)']\n",
       "\n",
       "> Generation # 3\n",
-      "['1', 1.0, 0, 'INFO,XC2,R2,Ens2,Se5, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R3,Ens2,Se3, INFO,XC3,R2,Ens3,Se2, ST,XC1,R2,Ens1,Se1']\n",
-      "['2', 0.5, 1, 'INFO,XC2,R2,Ens2,Se5, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R1,Ens2,Se2, INFO,XC3,R2,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['3', 0.5, 1, 'INFO,XC2,R2,Ens2,Se5, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R1,Ens2,Se2, INFO,XC3,R2,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['4', 0.5, 1, 'INFO,XC2,R2,Ens2,Se5, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R1,Ens2,Se2, INFO,XC3,R2,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['5', 0.333, 2, 'INFO,XC2,R2,Ens2,Se5, INFO,XC3,R2,Ens3,Se3, INFO,XC2,R1,Ens2,Se2, INFO,XC3,R2,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['6', 0.333, 2, 'INFO,XC2,R1,Ens2,Se5, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R1,Ens2,Se2, INFO,XC3,R2,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['7', 0.25, 3, 'INFO,XC2,R1,Ens2,Se5, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, ST,XC1,R2,Ens1,Se1']\n",
-      "['8', 0.2, 4, 'INFO,XC2,R1,Ens2,Se3, INFO,XC3,R1,Ens3,Se5, INFO,XC2,R1,Ens2,Se2, INFO,XC3,R2,Ens3,Se2, ST,XC1,R2,Ens1,Se2']\n",
-      "['9', 0.2, 4, 'INFO,XC2,R1,Ens2,Se5, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R1,Ens2,Se5, INFO,XC3,R2,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['1', 'INFO', 'cryptography (XC2, 30)', 'R2 (45)', 'Mr Nahal (Ens2)', '14h15-15h50 (Se5)']\n",
+      "['1', 0.5, 1, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
+      "['2', 0.5, 1, 'INFO,XC2,R2,Ens2,Se4, INFO,XC3,R2,Ens3,Se3, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R2,Ens3,Se5, ST,XC1,R1,Ens1,Se3']\n",
+      "['3', 0.5, 1, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
+      "['4', 0.5, 1, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
+      "['5', 0.5, 1, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R2,Ens3,Se3, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R3,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
+      "['6', 0.5, 1, 'INFO,XC2,R2,Ens2,Se4, INFO,XC3,R2,Ens3,Se5, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
+      "['7', 0.333, 2, 'INFO,XC2,R2,Ens2,Se3, INFO,XC3,R1,Ens3,Se3, INFO,XC2,R3,Ens2,Se4, INFO,XC3,R2,Ens3,Se5, ST,XC1,R2,Ens1,Se3']\n",
+      "['8', 0.333, 2, 'INFO,XC2,R2,Ens2,Se3, INFO,XC3,R2,Ens3,Se3, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R2,Ens3,Se5, ST,XC1,R1,Ens1,Se3']\n",
+      "['9', 0.333, 2, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R2,Ens3,Se5, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R2,Ens3,Se5, ST,XC1,R2,Ens1,Se3']\n",
+      "['1', 'INFO', 'cryptography (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '11h:05-12h:45 (Se3)']\n",
       "['2', 'INFO', 'analyse (XC3, 30)', 'R3 (35)', 'Mme Arroussi (Ens3)', '14h15-15h50 (Se5)']\n",
-      "['3', 'INFO', 'cryptography (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '11h:05-12h:45 (Se3)']\n",
-      "['4', 'INFO', 'analyse (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '9h:35-11h00 (Se2)']\n",
-      "['5', 'ST', 'algorithme (XC1, 40)', 'R2 (45)', 'Mr Cherif Zahar (Ens1)', '8h:00-9h:30 (Se1)']\n",
+      "['3', 'INFO', 'cryptography (XC2, 30)', 'R2 (45)', 'Mr Nahal (Ens2)', '13h:00-14h15 (Se4)']\n",
+      "['4', 'INFO', 'analyse (XC3, 30)', 'R1 (25)', 'Mme Arroussi (Ens3)', '9h:35-11h00 (Se2)']\n",
+      "['5', 'ST', 'algorithme (XC1, 40)', 'R2 (45)', 'Mr Cherif Zahar (Ens1)', '11h:05-12h:45 (Se3)']\n",
+      "\n",
+      "> Generation # 4\n",
+      "['1', 1.0, 0, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R3,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
+      "['2', 1.0, 0, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R3,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
+      "['3', 0.5, 1, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
+      "['4', 0.5, 1, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
+      "['5', 0.5, 1, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
+      "['6', 0.5, 1, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R2,Ens3,Se5, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
+      "['7', 0.5, 1, 'INFO,XC2,R2,Ens2,Se4, INFO,XC3,R2,Ens3,Se3, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R2,Ens3,Se5, ST,XC1,R1,Ens1,Se3']\n",
+      "['8', 0.333, 2, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R2,Ens3,Se3, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
+      "['9', 0.25, 3, 'INFO,XC2,R2,Ens2,Se4, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
+      "['1', 'INFO', 'cryptography (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '11h:05-12h:45 (Se3)']\n",
+      "['2', 'INFO', 'analyse (XC3, 30)', 'R3 (35)', 'Mme Arroussi (Ens3)', '14h15-15h50 (Se5)']\n",
+      "['3', 'INFO', 'cryptography (XC2, 30)', 'R2 (45)', 'Mr Nahal (Ens2)', '8h:00-9h:30 (Se1)']\n",
+      "['4', 'INFO', 'analyse (XC3, 30)', 'R3 (35)', 'Mme Arroussi (Ens3)', '9h:35-11h00 (Se2)']\n",
+      "['5', 'ST', 'algorithme (XC1, 40)', 'R2 (45)', 'Mr Cherif Zahar (Ens1)', '11h:05-12h:45 (Se3)']\n",
       "\n",
       "\n",
       "\n"
