--- a/resources/testing output.ipynb
+++ b/resources/testing output.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -10,19 +10,19 @@
      "output_type": "stream",
      "text": [
       "> All Available Data\n",
-      "+------+-------------------------+\n",
-      "| dept |         courses         |\n",
-      "+------+-------------------------+\n",
-      "| INFO | [cryptography, analyse] |\n",
-      "| INFO | [cryptography, analyse] |\n",
-      "|  ST  |       [algorithme]      |\n",
-      "+------+-------------------------+\n",
+      "+------+----------------+\n",
+      "| dept |    courses     |\n",
+      "+------+----------------+\n",
+      "| INFO | [cryptography] |\n",
+      "| Bio  |   [Anatomy]    |\n",
+      "|  ST  |  [algorithme]  |\n",
+      "+------+----------------+\n",
       "+-----+--------------+-------------------+-----------------+\n",
       "|  id |   course #   | max # of students |   instructors   |\n",
       "+-----+--------------+-------------------+-----------------+\n",
       "| XC1 |  algorithme  |         40        | Mr Cherif Zahar |\n",
       "| XC2 | cryptography |         30        |     Mr Nahal    |\n",
-      "| XC3 |   analyse    |         30        |   Mme Arroussi  |\n",
+      "| XC3 |   Anatomy    |         30        |   Mme Arroussi  |\n",
       "+-----+--------------+-------------------+-----------------+\n",
       "+--------+----------------------+\n",
       "| room # | max seating capacity |\n",
@@ -50,68 +50,18 @@
       "+-----+---------------+\n",
       "\n",
       "> Generation # 1\n",
-      "['1', 0.333, 2, 'INFO,XC2,R2,Ens2,Se3, INFO,XC3,R2,Ens3,Se3, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R2,Ens3,Se5, ST,XC1,R1,Ens1,Se3']\n",
-      "['2', 0.333, 2, 'INFO,XC2,R3,Ens2,Se5, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R1,Ens2,Se2, INFO,XC3,R3,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['3', 0.333, 2, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R2,Ens3,Se5, INFO,XC2,R1,Ens2,Se4, INFO,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se1']\n",
-      "['4', 0.333, 2, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R2,Ens3,Se2, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['5', 0.333, 2, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se4, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R3,Ens3,Se4, ST,XC1,R2,Ens1,Se2']\n",
-      "['6', 0.167, 5, 'INFO,XC2,R3,Ens2,Se1, INFO,XC3,R1,Ens3,Se4, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R3,Ens3,Se1, ST,XC1,R3,Ens1,Se1']\n",
-      "['7', 0.167, 5, 'INFO,XC2,R1,Ens2,Se2, INFO,XC3,R1,Ens3,Se4, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R2,Ens3,Se4, ST,XC1,R3,Ens1,Se3']\n",
-      "['8', 0.167, 5, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R1,Ens3,Se3, INFO,XC2,R2,Ens2,Se3, INFO,XC3,R3,Ens3,Se3, ST,XC1,R3,Ens1,Se4']\n",
-      "['9', 0.125, 7, 'INFO,XC2,R2,Ens2,Se3, INFO,XC3,R1,Ens3,Se5, INFO,XC2,R1,Ens2,Se2, INFO,XC3,R1,Ens3,Se5, ST,XC1,R1,Ens1,Se2']\n",
-      "['1', 'INFO', 'cryptography (XC2, 30)', 'R2 (45)', 'Mr Nahal (Ens2)', '11h:05-12h:45 (Se3)']\n",
-      "['2', 'INFO', 'analyse (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '11h:05-12h:45 (Se3)']\n",
-      "['3', 'INFO', 'cryptography (XC2, 30)', 'R2 (45)', 'Mr Nahal (Ens2)', '8h:00-9h:30 (Se1)']\n",
-      "['4', 'INFO', 'analyse (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '14h15-15h50 (Se5)']\n",
-      "['5', 'ST', 'algorithme (XC1, 40)', 'R1 (25)', 'Mr Cherif Zahar (Ens1)', '11h:05-12h:45 (Se3)']\n",
-      "\n",
-      "> Generation # 2\n",
-      "['1', 0.5, 1, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['2', 0.5, 1, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R2,Ens3,Se3, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R2,Ens3,Se5, ST,XC1,R2,Ens1,Se3']\n",
-      "['3', 0.5, 1, 'INFO,XC2,R2,Ens2,Se4, INFO,XC3,R2,Ens3,Se5, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['4', 0.333, 2, 'INFO,XC2,R2,Ens2,Se3, INFO,XC3,R2,Ens3,Se3, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R2,Ens3,Se5, ST,XC1,R1,Ens1,Se3']\n",
-      "['5', 0.333, 2, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se4, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R3,Ens3,Se4, ST,XC1,R2,Ens1,Se2']\n",
-      "['6', 0.333, 2, 'INFO,XC2,R3,Ens2,Se5, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R1,Ens2,Se4, INFO,XC3,R3,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['7', 0.25, 3, 'INFO,XC2,R2,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R1,Ens2,Se2, INFO,XC3,R2,Ens3,Se5, ST,XC1,R1,Ens1,Se3']\n",
-      "['8', 0.2, 4, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R2,Ens3,Se2, INFO,XC2,R2,Ens2,Se3, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['9', 0.167, 5, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R1,Ens3,Se3, INFO,XC2,R2,Ens2,Se3, INFO,XC3,R3,Ens3,Se3, ST,XC1,R3,Ens1,Se4']\n",
-      "['1', 'INFO', 'cryptography (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '11h:05-12h:45 (Se3)']\n",
-      "['2', 'INFO', 'analyse (XC3, 30)', 'R3 (35)', 'Mme Arroussi (Ens3)', '14h15-15h50 (Se5)']\n",
-      "['3', 'INFO', 'cryptography (XC2, 30)', 'R2 (45)', 'Mr Nahal (Ens2)', '13h:00-14h15 (Se4)']\n",
-      "['4', 'INFO', 'analyse (XC3, 30)', 'R1 (25)', 'Mme Arroussi (Ens3)', '9h:35-11h00 (Se2)']\n",
-      "['5', 'ST', 'algorithme (XC1, 40)', 'R2 (45)', 'Mr Cherif Zahar (Ens1)', '11h:05-12h:45 (Se3)']\n",
-      "\n",
-      "> Generation # 3\n",
-      "['1', 0.5, 1, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['2', 0.5, 1, 'INFO,XC2,R2,Ens2,Se4, INFO,XC3,R2,Ens3,Se3, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R2,Ens3,Se5, ST,XC1,R1,Ens1,Se3']\n",
-      "['3', 0.5, 1, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['4', 0.5, 1, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['5', 0.5, 1, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R2,Ens3,Se3, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R3,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['6', 0.5, 1, 'INFO,XC2,R2,Ens2,Se4, INFO,XC3,R2,Ens3,Se5, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['7', 0.333, 2, 'INFO,XC2,R2,Ens2,Se3, INFO,XC3,R1,Ens3,Se3, INFO,XC2,R3,Ens2,Se4, INFO,XC3,R2,Ens3,Se5, ST,XC1,R2,Ens1,Se3']\n",
-      "['8', 0.333, 2, 'INFO,XC2,R2,Ens2,Se3, INFO,XC3,R2,Ens3,Se3, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R2,Ens3,Se5, ST,XC1,R1,Ens1,Se3']\n",
-      "['9', 0.333, 2, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R2,Ens3,Se5, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R2,Ens3,Se5, ST,XC1,R2,Ens1,Se3']\n",
-      "['1', 'INFO', 'cryptography (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '11h:05-12h:45 (Se3)']\n",
-      "['2', 'INFO', 'analyse (XC3, 30)', 'R3 (35)', 'Mme Arroussi (Ens3)', '14h15-15h50 (Se5)']\n",
-      "['3', 'INFO', 'cryptography (XC2, 30)', 'R2 (45)', 'Mr Nahal (Ens2)', '13h:00-14h15 (Se4)']\n",
-      "['4', 'INFO', 'analyse (XC3, 30)', 'R1 (25)', 'Mme Arroussi (Ens3)', '9h:35-11h00 (Se2)']\n",
-      "['5', 'ST', 'algorithme (XC1, 40)', 'R2 (45)', 'Mr Cherif Zahar (Ens1)', '11h:05-12h:45 (Se3)']\n",
-      "\n",
-      "> Generation # 4\n",
-      "['1', 1.0, 0, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R3,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['2', 1.0, 0, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R3,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['3', 0.5, 1, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['4', 0.5, 1, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['5', 0.5, 1, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['6', 0.5, 1, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R2,Ens3,Se5, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['7', 0.5, 1, 'INFO,XC2,R2,Ens2,Se4, INFO,XC3,R2,Ens3,Se3, INFO,XC2,R2,Ens2,Se1, INFO,XC3,R2,Ens3,Se5, ST,XC1,R1,Ens1,Se3']\n",
-      "['8', 0.333, 2, 'INFO,XC2,R3,Ens2,Se3, INFO,XC3,R2,Ens3,Se3, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['9', 0.25, 3, 'INFO,XC2,R2,Ens2,Se4, INFO,XC3,R3,Ens3,Se5, INFO,XC2,R2,Ens2,Se4, INFO,XC3,R1,Ens3,Se2, ST,XC1,R2,Ens1,Se3']\n",
-      "['1', 'INFO', 'cryptography (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '11h:05-12h:45 (Se3)']\n",
-      "['2', 'INFO', 'analyse (XC3, 30)', 'R3 (35)', 'Mme Arroussi (Ens3)', '14h15-15h50 (Se5)']\n",
-      "['3', 'INFO', 'cryptography (XC2, 30)', 'R2 (45)', 'Mr Nahal (Ens2)', '8h:00-9h:30 (Se1)']\n",
-      "['4', 'INFO', 'analyse (XC3, 30)', 'R3 (35)', 'Mme Arroussi (Ens3)', '9h:35-11h00 (Se2)']\n",
-      "['5', 'ST', 'algorithme (XC1, 40)', 'R2 (45)', 'Mr Cherif Zahar (Ens1)', '11h:05-12h:45 (Se3)']\n",
+      "['1', 1.0, 0, 'INFO,XC2,R3,Ens2,Se1, Bio,XC3,R2,Ens3,Se4, ST,XC1,R2,Ens1,Se5']\n",
+      "['2', 1.0, 0, 'INFO,XC2,R3,Ens2,Se3, Bio,XC3,R2,Ens3,Se5, ST,XC1,R2,Ens1,Se3']\n",
+      "['3', 0.5, 1, 'INFO,XC2,R2,Ens2,Se4, Bio,XC3,R2,Ens3,Se5, ST,XC1,R3,Ens1,Se1']\n",
+      "['4', 0.5, 1, 'INFO,XC2,R1,Ens2,Se4, Bio,XC3,R3,Ens3,Se5, ST,XC1,R2,Ens1,Se1']\n",
+      "['5', 0.333, 2, 'INFO,XC2,R1,Ens2,Se3, Bio,XC3,R2,Ens3,Se3, ST,XC1,R3,Ens1,Se1']\n",
+      "['6', 0.333, 2, 'INFO,XC2,R3,Ens2,Se1, Bio,XC3,R1,Ens3,Se5, ST,XC1,R1,Ens1,Se4']\n",
+      "['7', 0.333, 2, 'INFO,XC2,R3,Ens2,Se4, Bio,XC3,R1,Ens3,Se2, ST,XC1,R3,Ens1,Se3']\n",
+      "['8', 0.333, 2, 'INFO,XC2,R1,Ens2,Se1, Bio,XC3,R2,Ens3,Se3, ST,XC1,R3,Ens1,Se3']\n",
+      "['9', 0.333, 2, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R1,Ens3,Se1, ST,XC1,R3,Ens1,Se2']\n",
+      "['1', 'INFO', 'cryptography (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '8h:00-9h:30 (Se1)']\n",
+      "['2', 'Bio', 'Anatomy (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '13h:00-14h15 (Se4)']\n",
+      "['3', 'ST', 'algorithme (XC1, 40)', 'R2 (45)', 'Mr Cherif Zahar (Ens1)', '14h15-15h50 (Se5)']\n",
       "\n",
       "\n",
       "\n"
@@ -448,6 +398,25 @@
     "                           classes[i].get_room().get_number() + \" (\" + str(classes[i].get_room().get_seatingCapacity()) + \")\",\n",
     "                           classes[i].get_instructor().get_name() +\" (\" + str(classes[i].get_instructor().get_id()) +\")\",\n",
     "                           classes[i].get_meetingTime().get_time() +\" (\" + str(classes[i].get_meetingTime().get_id()) +\")\"])\n",
+    "        \n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "    def schedule_as_table_to_db(self, schedule):\n",
+    "        classes = schedule.get_classes()\n",
+    "        for i in range(0, len(classes)):\n",
+    "            db_req= mydb.cursor()\n",
+    "            db_req.execute(\"INSERT INTO `scheduals` ( `generation_id`, `schedual_id`, `meeting_time`, `departement`, `coure`, `CourMaxStudents`, `enseignant`, `instructor_id`, `salle`, `salleMax`) VALUES ('', '', '\"+classes[i].get_meetingTime().get_time()+\"', '\"+ classes[i].get_dept().get_name()+\"', '\"+classes[i].get_course().get_name()+\"', '\"+str(classes[i].get_course().get_maxNumbOfStudents())+\"', '\"+classes[i].get_instructor().get_name()+\"', '\"+str(classes[i].get_instructor().get_id())+\"', '\"+classes[i].get_room().get_number()+\"', '\"+str(classes[i].get_room().get_seatingCapacity())+\"');\")\n",
+    "            mydb.commit()\n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "           \n",
+    "             \n",
+    "            \n",
+    "        \n",
     "       \n",
     "\n",
     "\n",
@@ -457,7 +426,7 @@
     "\n",
     "\n",
     "\n",
-    "\n",
+    "    \n",
     "\n",
     "\n",
     "\n",
@@ -495,11 +464,15 @@
     "print(\"\\n> Generation # \"+str(generationNumber))\n",
     "population = Population(POPULATION_SIZE)\n",
     "population.get_schedules().sort(key=lambda x: x.get_fitness(), reverse=True)\n",
+    "\n",
+    "\n",
     "count_gen_to_db(generationNumber)\n",
     "gen_to_db()\n",
     " \n",
     "displayMgr.print_generation(population)\n",
     "displayMgr.print_schedule_as_table(population.get_schedules()[0])\n",
+    "displayMgr.schedule_as_table_to_db(population.get_schedules()[0])\n",
+    " \n",
     "geneticAlgorithm = GeneticAlgorithm()\n",
     "while (population.get_schedules()[0].get_fitness() != 1.0):\n",
     "    generationNumber += 1\n",
@@ -520,16 +493,8 @@
     "    \n",
     "    displayMgr.print_generation(population)\n",
     "    displayMgr.print_schedule_as_table(population.get_schedules()[0])\n",
+    "    displayMgr.schedule_as_table_to_db(population.get_schedules()[0])\n",
     "print(\"\\n\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " "
    ]
   },
   {
