--- a/resources/testing output.ipynb
+++ b/resources/testing output.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -50,18 +50,74 @@
       "+-----+---------------+\n",
       "\n",
       "> Generation # 1\n",
-      "['1', 1.0, 0, 'INFO,XC2,R3,Ens2,Se1, Bio,XC3,R2,Ens3,Se4, ST,XC1,R2,Ens1,Se5']\n",
-      "['2', 1.0, 0, 'INFO,XC2,R3,Ens2,Se3, Bio,XC3,R2,Ens3,Se5, ST,XC1,R2,Ens1,Se3']\n",
-      "['3', 0.5, 1, 'INFO,XC2,R2,Ens2,Se4, Bio,XC3,R2,Ens3,Se5, ST,XC1,R3,Ens1,Se1']\n",
-      "['4', 0.5, 1, 'INFO,XC2,R1,Ens2,Se4, Bio,XC3,R3,Ens3,Se5, ST,XC1,R2,Ens1,Se1']\n",
-      "['5', 0.333, 2, 'INFO,XC2,R1,Ens2,Se3, Bio,XC3,R2,Ens3,Se3, ST,XC1,R3,Ens1,Se1']\n",
-      "['6', 0.333, 2, 'INFO,XC2,R3,Ens2,Se1, Bio,XC3,R1,Ens3,Se5, ST,XC1,R1,Ens1,Se4']\n",
-      "['7', 0.333, 2, 'INFO,XC2,R3,Ens2,Se4, Bio,XC3,R1,Ens3,Se2, ST,XC1,R3,Ens1,Se3']\n",
-      "['8', 0.333, 2, 'INFO,XC2,R1,Ens2,Se1, Bio,XC3,R2,Ens3,Se3, ST,XC1,R3,Ens1,Se3']\n",
-      "['9', 0.333, 2, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R1,Ens3,Se1, ST,XC1,R3,Ens1,Se2']\n",
-      "['1', 'INFO', 'cryptography (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '8h:00-9h:30 (Se1)']\n",
-      "['2', 'Bio', 'Anatomy (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '13h:00-14h15 (Se4)']\n",
-      "['3', 'ST', 'algorithme (XC1, 40)', 'R2 (45)', 'Mr Cherif Zahar (Ens1)', '14h15-15h50 (Se5)']\n",
+      "['1', 0.5, 1, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R3,Ens3,Se1, ST,XC1,R1,Ens1,Se4']\n",
+      "['2', 0.5, 1, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R3,Ens3,Se1, ST,XC1,R3,Ens1,Se3']\n",
+      "['3', 0.5, 1, 'INFO,XC2,R1,Ens2,Se1, Bio,XC3,R3,Ens3,Se1, ST,XC1,R2,Ens1,Se1']\n",
+      "['4', 0.5, 1, 'INFO,XC2,R2,Ens2,Se3, Bio,XC3,R3,Ens3,Se5, ST,XC1,R1,Ens1,Se1']\n",
+      "['5', 0.333, 2, 'INFO,XC2,R1,Ens2,Se1, Bio,XC3,R3,Ens3,Se1, ST,XC1,R3,Ens1,Se5']\n",
+      "['6', 0.333, 2, 'INFO,XC2,R2,Ens2,Se1, Bio,XC3,R2,Ens3,Se1, ST,XC1,R3,Ens1,Se3']\n",
+      "['7', 0.333, 2, 'INFO,XC2,R3,Ens2,Se2, Bio,XC3,R2,Ens3,Se2, ST,XC1,R3,Ens1,Se2']\n",
+      "['8', 0.333, 2, 'INFO,XC2,R1,Ens2,Se4, Bio,XC3,R2,Ens3,Se3, ST,XC1,R3,Ens1,Se3']\n",
+      "['9', 0.25, 3, 'INFO,XC2,R2,Ens2,Se1, Bio,XC3,R1,Ens3,Se2, ST,XC1,R1,Ens1,Se2']\n",
+      "['1', 'INFO', 'cryptography (XC2, 30)', 'R2 (45)', 'Mr Nahal (Ens2)', '9h:35-11h00 (Se2)']\n",
+      "['2', 'Bio', 'Anatomy (XC3, 30)', 'R3 (35)', 'Mme Arroussi (Ens3)', '8h:00-9h:30 (Se1)']\n",
+      "['3', 'ST', 'algorithme (XC1, 40)', 'R1 (25)', 'Mr Cherif Zahar (Ens1)', '13h:00-14h15 (Se4)']\n",
+      "\n",
+      "> Generation # 2\n",
+      "['1', 0.5, 1, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R3,Ens3,Se1, ST,XC1,R1,Ens1,Se4']\n",
+      "['2', 0.5, 1, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R3,Ens3,Se1, ST,XC1,R3,Ens1,Se2']\n",
+      "['3', 0.5, 1, 'INFO,XC2,R2,Ens2,Se1, Bio,XC3,R3,Ens3,Se5, ST,XC1,R3,Ens1,Se3']\n",
+      "['4', 0.5, 1, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R3,Ens3,Se1, ST,XC1,R1,Ens1,Se4']\n",
+      "['5', 0.5, 1, 'INFO,XC2,R2,Ens2,Se1, Bio,XC3,R3,Ens3,Se1, ST,XC1,R3,Ens1,Se3']\n",
+      "['6', 0.333, 2, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R1,Ens3,Se5, ST,XC1,R1,Ens1,Se4']\n",
+      "['7', 0.333, 2, 'INFO,XC2,R1,Ens2,Se4, Bio,XC3,R2,Ens3,Se3, ST,XC1,R3,Ens1,Se3']\n",
+      "['8', 0.333, 2, 'INFO,XC2,R1,Ens2,Se1, Bio,XC3,R3,Ens3,Se1, ST,XC1,R3,Ens1,Se4']\n",
+      "['9', 0.333, 2, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R2,Ens3,Se2, ST,XC1,R3,Ens1,Se3']\n",
+      "['1', 'INFO', 'cryptography (XC2, 30)', 'R2 (45)', 'Mr Nahal (Ens2)', '9h:35-11h00 (Se2)']\n",
+      "['2', 'Bio', 'Anatomy (XC3, 30)', 'R3 (35)', 'Mme Arroussi (Ens3)', '8h:00-9h:30 (Se1)']\n",
+      "['3', 'ST', 'algorithme (XC1, 40)', 'R1 (25)', 'Mr Cherif Zahar (Ens1)', '13h:00-14h15 (Se4)']\n",
+      "\n",
+      "> Generation # 3\n",
+      "['1', 0.5, 1, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R3,Ens3,Se1, ST,XC1,R1,Ens1,Se4']\n",
+      "['2', 0.5, 1, 'INFO,XC2,R2,Ens2,Se1, Bio,XC3,R3,Ens3,Se5, ST,XC1,R3,Ens1,Se3']\n",
+      "['3', 0.5, 1, 'INFO,XC2,R2,Ens2,Se1, Bio,XC3,R3,Ens3,Se1, ST,XC1,R3,Ens1,Se2']\n",
+      "['4', 0.5, 1, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R3,Ens3,Se1, ST,XC1,R3,Ens1,Se2']\n",
+      "['5', 0.5, 1, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R3,Ens3,Se1, ST,XC1,R3,Ens1,Se2']\n",
+      "['6', 0.5, 1, 'INFO,XC2,R2,Ens2,Se1, Bio,XC3,R3,Ens3,Se5, ST,XC1,R3,Ens1,Se3']\n",
+      "['7', 0.5, 1, 'INFO,XC2,R2,Ens2,Se1, Bio,XC3,R3,Ens3,Se5, ST,XC1,R3,Ens1,Se3']\n",
+      "['8', 0.333, 2, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R1,Ens3,Se5, ST,XC1,R1,Ens1,Se4']\n",
+      "['9', 0.333, 2, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R2,Ens3,Se2, ST,XC1,R1,Ens1,Se4']\n",
+      "['1', 'INFO', 'cryptography (XC2, 30)', 'R2 (45)', 'Mr Nahal (Ens2)', '9h:35-11h00 (Se2)']\n",
+      "['2', 'Bio', 'Anatomy (XC3, 30)', 'R3 (35)', 'Mme Arroussi (Ens3)', '8h:00-9h:30 (Se1)']\n",
+      "['3', 'ST', 'algorithme (XC1, 40)', 'R1 (25)', 'Mr Cherif Zahar (Ens1)', '13h:00-14h15 (Se4)']\n",
+      "\n",
+      "> Generation # 4\n",
+      "['1', 0.5, 1, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R3,Ens3,Se1, ST,XC1,R1,Ens1,Se4']\n",
+      "['2', 0.5, 1, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R3,Ens3,Se1, ST,XC1,R3,Ens1,Se2']\n",
+      "['3', 0.5, 1, 'INFO,XC2,R2,Ens2,Se1, Bio,XC3,R3,Ens3,Se5, ST,XC1,R3,Ens1,Se2']\n",
+      "['4', 0.5, 1, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R3,Ens3,Se5, ST,XC1,R3,Ens1,Se3']\n",
+      "['5', 0.5, 1, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R3,Ens3,Se1, ST,XC1,R3,Ens1,Se2']\n",
+      "['6', 0.5, 1, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R3,Ens3,Se1, ST,XC1,R3,Ens1,Se2']\n",
+      "['7', 0.5, 1, 'INFO,XC2,R2,Ens2,Se1, Bio,XC3,R3,Ens3,Se1, ST,XC1,R3,Ens1,Se2']\n",
+      "['8', 0.5, 1, 'INFO,XC2,R2,Ens2,Se1, Bio,XC3,R3,Ens3,Se1, ST,XC1,R3,Ens1,Se3']\n",
+      "['9', 0.333, 2, 'INFO,XC2,R1,Ens2,Se5, Bio,XC3,R3,Ens3,Se1, ST,XC1,R3,Ens1,Se3']\n",
+      "['1', 'INFO', 'cryptography (XC2, 30)', 'R2 (45)', 'Mr Nahal (Ens2)', '9h:35-11h00 (Se2)']\n",
+      "['2', 'Bio', 'Anatomy (XC3, 30)', 'R3 (35)', 'Mme Arroussi (Ens3)', '8h:00-9h:30 (Se1)']\n",
+      "['3', 'ST', 'algorithme (XC1, 40)', 'R1 (25)', 'Mr Cherif Zahar (Ens1)', '13h:00-14h15 (Se4)']\n",
+      "\n",
+      "> Generation # 5\n",
+      "['1', 1.0, 0, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R3,Ens3,Se1, ST,XC1,R2,Ens1,Se1']\n",
+      "['2', 1.0, 0, 'INFO,XC2,R2,Ens2,Se1, Bio,XC3,R3,Ens3,Se1, ST,XC1,R2,Ens1,Se3']\n",
+      "['3', 0.5, 1, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R3,Ens3,Se1, ST,XC1,R1,Ens1,Se4']\n",
+      "['4', 0.5, 1, 'INFO,XC2,R2,Ens2,Se1, Bio,XC3,R3,Ens3,Se1, ST,XC1,R3,Ens1,Se2']\n",
+      "['5', 0.5, 1, 'INFO,XC2,R2,Ens2,Se1, Bio,XC3,R3,Ens3,Se1, ST,XC1,R3,Ens1,Se3']\n",
+      "['6', 0.5, 1, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R3,Ens3,Se1, ST,XC1,R3,Ens1,Se2']\n",
+      "['7', 0.5, 1, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R3,Ens3,Se1, ST,XC1,R3,Ens1,Se2']\n",
+      "['8', 0.5, 1, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R3,Ens3,Se1, ST,XC1,R1,Ens1,Se4']\n",
+      "['9', 0.333, 2, 'INFO,XC2,R2,Ens2,Se2, Bio,XC3,R1,Ens3,Se5, ST,XC1,R3,Ens1,Se2']\n",
+      "['1', 'INFO', 'cryptography (XC2, 30)', 'R2 (45)', 'Mr Nahal (Ens2)', '9h:35-11h00 (Se2)']\n",
+      "['2', 'Bio', 'Anatomy (XC3, 30)', 'R3 (35)', 'Mme Arroussi (Ens3)', '8h:00-9h:30 (Se1)']\n",
+      "['3', 'ST', 'algorithme (XC1, 40)', 'R2 (45)', 'Mr Cherif Zahar (Ens1)', '8h:00-9h:30 (Se1)']\n",
       "\n",
       "\n",
       "\n"
@@ -406,7 +462,7 @@
     "        classes = schedule.get_classes()\n",
     "        for i in range(0, len(classes)):\n",
     "            db_req= mydb.cursor()\n",
-    "            db_req.execute(\"INSERT INTO `scheduals` ( `generation_id`, `schedual_id`, `meeting_time`, `departement`, `coure`, `CourMaxStudents`, `enseignant`, `instructor_id`, `salle`, `salleMax`) VALUES ('', '', '\"+classes[i].get_meetingTime().get_time()+\"', '\"+ classes[i].get_dept().get_name()+\"', '\"+classes[i].get_course().get_name()+\"', '\"+str(classes[i].get_course().get_maxNumbOfStudents())+\"', '\"+classes[i].get_instructor().get_name()+\"', '\"+str(classes[i].get_instructor().get_id())+\"', '\"+classes[i].get_room().get_number()+\"', '\"+str(classes[i].get_room().get_seatingCapacity())+\"');\")\n",
+    "            db_req.execute(\"INSERT INTO `scheduals` ( `generation_id`, `schedual_id`, `meeting_time`, `departement`, `coure`, `CourMaxStudents`, `enseignant`, `instructor_id`, `salle`, `salleMax`) VALUES ('\"+str(generationNumber)+\"', '1', '\"+classes[i].get_meetingTime().get_time()+\"', '\"+ classes[i].get_dept().get_name()+\"', '\"+classes[i].get_course().get_name()+\"', '\"+str(classes[i].get_course().get_maxNumbOfStudents())+\"', '\"+classes[i].get_instructor().get_name()+\"', '\"+str(classes[i].get_instructor().get_id())+\"', '\"+classes[i].get_room().get_number()+\"', '\"+str(classes[i].get_room().get_seatingCapacity())+\"');\")\n",
     "            mydb.commit()\n",
     "            \n",
     "            \n",
@@ -447,6 +503,9 @@
     "            schaduale_id=str(i+1)\n",
     "            schadual_fitness=schedules[i].get_fitness()\n",
     "            schadual_classes=schedules[i].__str__()\n",
+    "            \n",
+    "            \n",
+    "          \n",
     "            db_req= mydb.cursor()\n",
     "            db_req.execute(\"INSERT INTO generation_scheduals (generation_id, schaduale_id,schadual_fitness,schadual_classes) VALUES (\"+generation_id+\", \"+schaduale_id+\",'\" + str(schadual_fitness) + \"','\" + schadual_classes + \"')\")\n",
     "            mydb.commit()\n",
@@ -470,8 +529,9 @@
     "gen_to_db()\n",
     " \n",
     "displayMgr.print_generation(population)\n",
-    "displayMgr.print_schedule_as_table(population.get_schedules()[0])\n",
     "displayMgr.schedule_as_table_to_db(population.get_schedules()[0])\n",
+    "displayMgr.print_schedule_as_table(population.get_schedules()[0])\n",
+    "\n",
     " \n",
     "geneticAlgorithm = GeneticAlgorithm()\n",
     "while (population.get_schedules()[0].get_fitness() != 1.0):\n",
@@ -492,8 +552,9 @@
     "    \n",
     "    \n",
     "    displayMgr.print_generation(population)\n",
-    "    displayMgr.print_schedule_as_table(population.get_schedules()[0])\n",
     "    displayMgr.schedule_as_table_to_db(population.get_schedules()[0])\n",
+    "    displayMgr.print_schedule_as_table(population.get_schedules()[0])\n",
+    "    \n",
     "print(\"\\n\\n\")"
    ]
   },
