contraint pas plus de 2 cour par jour

--- a/resources/testing output.ipynb
+++ b/resources/testing output.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -10,21 +10,23 @@
      "output_type": "stream",
      "text": [
       "> All Available Data\n",
-      "+------+--------------------+\n",
-      "| dept |      courses       |\n",
-      "+------+--------------------+\n",
-      "| INFO | [cryptography, IA] |\n",
-      "| Bio  |     [TD_Algo]      |\n",
-      "|  ST  |    [algorithme]    |\n",
-      "+------+--------------------+\n",
-      "+-----+--------------+-------------------+-----------------+\n",
-      "|  id |   course #   | max # of students |   instructors   |\n",
-      "+-----+--------------+-------------------+-----------------+\n",
-      "| XC1 |  algorithme  |         25        | Mr Cherif Zahar |\n",
-      "| XC2 | cryptography |         30        |     Mr Nahal    |\n",
-      "| XC3 |   TD_Algo    |         30        |   Mme Arroussi  |\n",
-      "| XC4 |      IA      |         45        |    Miss Bacha   |\n",
-      "+-----+--------------+-------------------+-----------------+\n",
+      "+------+-----------------------+\n",
+      "| dept |        courses        |\n",
+      "+------+-----------------------+\n",
+      "| INFO | [TD_AI, IA, POO, IHM] |\n",
+      "| Bio  |       [TD_Algo]       |\n",
+      "|  ST  |      [algorithme]     |\n",
+      "+------+-----------------------+\n",
+      "+-----+------------+-------------------+-----------------+\n",
+      "|  id |  course #  | max # of students |   instructors   |\n",
+      "+-----+------------+-------------------+-----------------+\n",
+      "| XC1 | algorithme |         25        | Mr Cherif Zahar |\n",
+      "| XC3 |  TD_Algo   |         30        |   Mme Arroussi  |\n",
+      "| XC2 |   TD_AI    |         30        |     Mr Nahal    |\n",
+      "| XC4 |     IA     |         45        |    Miss Bacha   |\n",
+      "| XC5 |    POO     |         45        |     Boutomi     |\n",
+      "| XC6 |    IHM     |         30        |     Boutomi     |\n",
+      "+-----+------------+-------------------+-----------------+\n",
       "+--------+----------------------+\n",
       "| room # | max seating capacity |\n",
       "+--------+----------------------+\n",
@@ -39,6 +41,7 @@
       "| Ens2 |     Mr Nahal    |\n",
       "| Ens3 |   Mme Arroussi  |\n",
       "| Ens4 |    Miss Bacha   |\n",
+      "| Ens5 |     Boutomi     |\n",
       "+------+-----------------+\n",
       "+------+---------------+\n",
       "|  id  |  Meeting Time |\n",
@@ -71,19 +74,112 @@
       "+------+---------------+\n",
       "\n",
       "> Generation # 1\n",
-      "['1', 1.0, 0, 'INFO,XC2,R3,Ens2,Se10, INFO,XC4,R2,Ens4,Se13, Bio,XC3,R3,Ens3,Se12, ST,XC1,R2,Ens1,Se16']\n",
-      "['2', 0.5, 1, 'INFO,XC2,R3,Ens2,Se18, INFO,XC4,R2,Ens4,Se3, Bio,XC3,R3,Ens3,Se25, ST,XC1,R1,Ens1,Se6']\n",
-      "['3', 0.5, 1, 'INFO,XC2,R3,Ens2,Se21, INFO,XC4,R3,Ens4,Se23, Bio,XC3,R2,Ens3,Se13, ST,XC1,R3,Ens1,Se2']\n",
-      "['4', 0.5, 1, 'INFO,XC2,R2,Ens2,Se22, INFO,XC4,R3,Ens4,Se14, Bio,XC3,R3,Ens3,Se8, ST,XC1,R3,Ens1,Se3']\n",
-      "['5', 0.5, 1, 'INFO,XC2,R2,Ens2,Se17, INFO,XC4,R2,Ens4,Se10, Bio,XC3,R3,Ens3,Se16, ST,XC1,R3,Ens1,Se5']\n",
-      "['6', 0.5, 1, 'INFO,XC2,R3,Ens2,Se8, INFO,XC4,R1,Ens4,Se6, Bio,XC3,R2,Ens3,Se18, ST,XC1,R1,Ens1,Se22']\n",
-      "['7', 0.333, 2, 'INFO,XC2,R2,Ens2,Se2, INFO,XC4,R1,Ens4,Se2, Bio,XC3,R2,Ens3,Se4, ST,XC1,R3,Ens1,Se12']\n",
-      "['8', 0.333, 2, 'INFO,XC2,R1,Ens2,Se18, INFO,XC4,R1,Ens4,Se25, Bio,XC3,R3,Ens3,Se13, ST,XC1,R2,Ens1,Se23']\n",
-      "['9', 0.25, 3, 'INFO,XC2,R3,Ens2,Se7, INFO,XC4,R1,Ens4,Se16, Bio,XC3,R3,Ens3,Se7, ST,XC1,R1,Ens1,Se5']\n",
-      "['1', 'INFO', 'cryptography (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '14h15-15h50 (Se10)']\n",
+      "['1', 0.333, 2, 'INFO,XC2,R3,Ens2,Se14, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se2, INFO,XC6,R3,Ens5,Se6, Bio,XC3,R2,Ens3,Se20, ST,XC1,R1,Ens1,Se6']\n",
+      "['2', 0.25, 3, 'INFO,XC2,R3,Ens2,Se17, INFO,XC4,R3,Ens4,Se14, INFO,XC5,R2,Ens5,Se22, INFO,XC6,R1,Ens5,Se17, Bio,XC3,R2,Ens3,Se21, ST,XC1,R2,Ens1,Se4']\n",
+      "['3', 0.25, 3, 'INFO,XC2,R3,Ens2,Se7, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se13, INFO,XC6,R3,Ens5,Se21, Bio,XC3,R1,Ens3,Se7, ST,XC1,R2,Ens1,Se9']\n",
+      "['4', 0.25, 3, 'INFO,XC2,R3,Ens2,Se1, INFO,XC4,R2,Ens4,Se18, INFO,XC5,R2,Ens5,Se17, INFO,XC6,R1,Ens5,Se16, Bio,XC3,R1,Ens3,Se13, ST,XC1,R1,Ens1,Se13']\n",
+      "['5', 0.25, 3, 'INFO,XC2,R3,Ens2,Se10, INFO,XC4,R3,Ens4,Se9, INFO,XC5,R1,Ens5,Se13, INFO,XC6,R2,Ens5,Se8, Bio,XC3,R2,Ens3,Se20, ST,XC1,R3,Ens1,Se7']\n",
+      "['6', 0.2, 4, 'INFO,XC2,R3,Ens2,Se3, INFO,XC4,R2,Ens4,Se1, INFO,XC5,R3,Ens5,Se9, INFO,XC6,R3,Ens5,Se1, Bio,XC3,R1,Ens3,Se9, ST,XC1,R3,Ens1,Se6']\n",
+      "['7', 0.167, 5, 'INFO,XC2,R2,Ens2,Se25, INFO,XC4,R1,Ens4,Se22, INFO,XC5,R1,Ens5,Se8, INFO,XC6,R1,Ens5,Se24, Bio,XC3,R1,Ens3,Se16, ST,XC1,R3,Ens1,Se5']\n",
+      "['8', 0.167, 5, 'INFO,XC2,R1,Ens2,Se11, INFO,XC4,R2,Ens4,Se1, INFO,XC5,R1,Ens5,Se3, INFO,XC6,R1,Ens5,Se1, Bio,XC3,R2,Ens3,Se19, ST,XC1,R3,Ens1,Se19']\n",
+      "['9', 0.143, 6, 'INFO,XC2,R2,Ens2,Se15, INFO,XC4,R2,Ens4,Se4, INFO,XC5,R3,Ens5,Se14, INFO,XC6,R1,Ens5,Se5, Bio,XC3,R1,Ens3,Se10, ST,XC1,R3,Ens1,Se25']\n",
+      "['1', 'INFO', 'TD_AI (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '13h:00-14h15 (Se14)']\n",
       "['2', 'INFO', 'IA (XC4, 45)', 'R2 (45)', 'Miss Bacha (Ens4)', '11h:05-12h:45 (Se13)']\n",
-      "['3', 'Bio', 'TD_Algo (XC3, 30)', 'R3 (35)', 'Mme Arroussi (Ens3)', '9h:35-11h00 (Se12)']\n",
-      "['4', 'ST', 'algorithme (XC1, 25)', 'R2 (45)', 'Mr Cherif Zahar (Ens1)', '8h:00-9h:30 (Se16)']\n",
+      "['3', 'INFO', 'POO (XC5, 45)', 'R1 (25)', 'Boutomi (Ens5)', '9h:35-11h00 (Se2)']\n",
+      "['4', 'INFO', 'IHM (XC6, 30)', 'R3 (35)', 'Boutomi (Ens5)', '8h:00-9h:30 (Se6)']\n",
+      "['5', 'Bio', 'TD_Algo (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '14h15-15h50 (Se20)']\n",
+      "['6', 'ST', 'algorithme (XC1, 25)', 'R1 (25)', 'Mr Cherif Zahar (Ens1)', '8h:00-9h:30 (Se6)']\n",
+      "\n",
+      "> Generation # 2\n",
+      "['1', 0.333, 2, 'INFO,XC2,R3,Ens2,Se14, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se2, INFO,XC6,R3,Ens5,Se6, Bio,XC3,R2,Ens3,Se20, ST,XC1,R1,Ens1,Se6']\n",
+      "['2', 0.333, 2, 'INFO,XC2,R3,Ens2,Se10, INFO,XC4,R3,Ens4,Se9, INFO,XC5,R2,Ens5,Se7, INFO,XC6,R1,Ens5,Se16, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se13']\n",
+      "['3', 0.25, 3, 'INFO,XC2,R3,Ens2,Se7, INFO,XC4,R2,Ens4,Se1, INFO,XC5,R1,Ens5,Se13, INFO,XC6,R3,Ens5,Se1, Bio,XC3,R1,Ens3,Se9, ST,XC1,R3,Ens1,Se6']\n",
+      "['4', 0.25, 3, 'INFO,XC2,R3,Ens2,Se14, INFO,XC4,R3,Ens4,Se14, INFO,XC5,R2,Ens5,Se22, INFO,XC6,R3,Ens5,Se6, Bio,XC3,R2,Ens3,Se21, ST,XC1,R2,Ens1,Se4']\n",
+      "['5', 0.25, 3, 'INFO,XC2,R3,Ens2,Se14, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se2, INFO,XC6,R3,Ens5,Se6, Bio,XC3,R2,Ens3,Se20, ST,XC1,R3,Ens1,Se9']\n",
+      "['6', 0.25, 3, 'INFO,XC2,R3,Ens2,Se14, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se13, INFO,XC6,R3,Ens5,Se21, Bio,XC3,R1,Ens3,Se7, ST,XC1,R2,Ens1,Se9']\n",
+      "['7', 0.25, 3, 'INFO,XC2,R3,Ens2,Se17, INFO,XC4,R3,Ens4,Se14, INFO,XC5,R2,Ens5,Se22, INFO,XC6,R1,Ens5,Se17, Bio,XC3,R2,Ens3,Se21, ST,XC1,R2,Ens1,Se4']\n",
+      "['8', 0.2, 4, 'INFO,XC2,R1,Ens2,Se20, INFO,XC4,R2,Ens4,Se18, INFO,XC5,R2,Ens5,Se22, INFO,XC6,R1,Ens5,Se17, Bio,XC3,R1,Ens3,Se13, ST,XC1,R2,Ens1,Se4']\n",
+      "['9', 0.2, 4, 'INFO,XC2,R3,Ens2,Se10, INFO,XC4,R3,Ens4,Se9, INFO,XC5,R3,Ens5,Se25, INFO,XC6,R2,Ens5,Se8, Bio,XC3,R2,Ens3,Se20, ST,XC1,R1,Ens1,Se13']\n",
+      "['1', 'INFO', 'TD_AI (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '13h:00-14h15 (Se14)']\n",
+      "['2', 'INFO', 'IA (XC4, 45)', 'R2 (45)', 'Miss Bacha (Ens4)', '11h:05-12h:45 (Se13)']\n",
+      "['3', 'INFO', 'POO (XC5, 45)', 'R1 (25)', 'Boutomi (Ens5)', '9h:35-11h00 (Se2)']\n",
+      "['4', 'INFO', 'IHM (XC6, 30)', 'R3 (35)', 'Boutomi (Ens5)', '8h:00-9h:30 (Se6)']\n",
+      "['5', 'Bio', 'TD_Algo (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '14h15-15h50 (Se20)']\n",
+      "['6', 'ST', 'algorithme (XC1, 25)', 'R1 (25)', 'Mr Cherif Zahar (Ens1)', '8h:00-9h:30 (Se6)']\n",
+      "\n",
+      "> Generation # 3\n",
+      "['1', 0.333, 2, 'INFO,XC2,R3,Ens2,Se14, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se2, INFO,XC6,R3,Ens5,Se6, Bio,XC3,R2,Ens3,Se20, ST,XC1,R1,Ens1,Se6']\n",
+      "['2', 0.333, 2, 'INFO,XC2,R3,Ens2,Se14, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R2,Ens5,Se7, INFO,XC6,R1,Ens5,Se16, Bio,XC3,R2,Ens3,Se20, ST,XC1,R1,Ens1,Se6']\n",
+      "['3', 0.333, 2, 'INFO,XC2,R3,Ens2,Se10, INFO,XC4,R3,Ens4,Se9, INFO,XC5,R2,Ens5,Se7, INFO,XC6,R1,Ens5,Se16, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se13']\n",
+      "['4', 0.333, 2, 'INFO,XC2,R1,Ens2,Se20, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se2, INFO,XC6,R3,Ens5,Se6, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se6']\n",
+      "['5', 0.25, 3, 'INFO,XC2,R3,Ens2,Se7, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se2, INFO,XC6,R3,Ens5,Se6, Bio,XC3,R1,Ens3,Se14, ST,XC1,R1,Ens1,Se6']\n",
+      "['6', 0.25, 3, 'INFO,XC2,R3,Ens2,Se7, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se13, INFO,XC6,R3,Ens5,Se6, Bio,XC3,R1,Ens3,Se9, ST,XC1,R1,Ens1,Se1']\n",
+      "['7', 0.25, 3, 'INFO,XC2,R3,Ens2,Se10, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se4, INFO,XC6,R1,Ens5,Se16, Bio,XC3,R3,Ens3,Se21, ST,XC1,R1,Ens1,Se13']\n",
+      "['8', 0.25, 3, 'INFO,XC2,R2,Ens2,Se22, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se13, INFO,XC6,R3,Ens5,Se21, Bio,XC3,R2,Ens3,Se20, ST,XC1,R2,Ens1,Se9']\n",
+      "['9', 0.2, 4, 'INFO,XC2,R3,Ens2,Se7, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se2, INFO,XC6,R3,Ens5,Se6, Bio,XC3,R1,Ens3,Se9, ST,XC1,R3,Ens1,Se9']\n",
+      "['1', 'INFO', 'TD_AI (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '13h:00-14h15 (Se14)']\n",
+      "['2', 'INFO', 'IA (XC4, 45)', 'R2 (45)', 'Miss Bacha (Ens4)', '11h:05-12h:45 (Se13)']\n",
+      "['3', 'INFO', 'POO (XC5, 45)', 'R1 (25)', 'Boutomi (Ens5)', '9h:35-11h00 (Se2)']\n",
+      "['4', 'INFO', 'IHM (XC6, 30)', 'R3 (35)', 'Boutomi (Ens5)', '8h:00-9h:30 (Se6)']\n",
+      "['5', 'Bio', 'TD_Algo (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '14h15-15h50 (Se20)']\n",
+      "['6', 'ST', 'algorithme (XC1, 25)', 'R1 (25)', 'Mr Cherif Zahar (Ens1)', '8h:00-9h:30 (Se6)']\n",
+      "\n",
+      "> Generation # 4\n",
+      "['1', 0.333, 2, 'INFO,XC2,R3,Ens2,Se14, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se2, INFO,XC6,R3,Ens5,Se6, Bio,XC3,R2,Ens3,Se20, ST,XC1,R1,Ens1,Se6']\n",
+      "['2', 0.333, 2, 'INFO,XC2,R3,Ens2,Se14, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R2,Ens5,Se7, INFO,XC6,R1,Ens5,Se16, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se14']\n",
+      "['3', 0.333, 2, 'INFO,XC2,R3,Ens2,Se7, INFO,XC4,R3,Ens4,Se9, INFO,XC5,R2,Ens5,Se7, INFO,XC6,R1,Ens5,Se16, Bio,XC3,R3,Ens3,Se2, ST,XC1,R1,Ens1,Se1']\n",
+      "['4', 0.25, 3, 'INFO,XC2,R3,Ens2,Se3, INFO,XC4,R2,Ens4,Se3, INFO,XC5,R1,Ens5,Se2, INFO,XC6,R1,Ens5,Se16, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se13']\n",
+      "['5', 0.25, 3, 'INFO,XC2,R3,Ens2,Se9, INFO,XC4,R3,Ens4,Se9, INFO,XC5,R1,Ens5,Se2, INFO,XC6,R3,Ens5,Se6, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se6']\n",
+      "['6', 0.2, 4, 'INFO,XC2,R1,Ens2,Se15, INFO,XC4,R3,Ens4,Se9, INFO,XC5,R2,Ens5,Se7, INFO,XC6,R1,Ens5,Se16, Bio,XC3,R2,Ens3,Se5, ST,XC1,R1,Ens1,Se13']\n",
+      "['7', 0.2, 4, 'INFO,XC2,R1,Ens2,Se20, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se13, INFO,XC6,R3,Ens5,Se21, Bio,XC3,R2,Ens3,Se20, ST,XC1,R2,Ens1,Se9']\n",
+      "['8', 0.2, 4, 'INFO,XC2,R3,Ens2,Se14, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se4, INFO,XC6,R1,Ens5,Se16, Bio,XC3,R2,Ens3,Se20, ST,XC1,R1,Ens1,Se6']\n",
+      "['9', 0.167, 5, 'INFO,XC2,R2,Ens2,Se16, INFO,XC4,R3,Ens4,Se22, INFO,XC5,R3,Ens5,Se19, INFO,XC6,R1,Ens5,Se16, Bio,XC3,R2,Ens3,Se20, ST,XC1,R1,Ens1,Se13']\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', 'INFO', 'TD_AI (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '13h:00-14h15 (Se14)']\n",
+      "['2', 'INFO', 'IA (XC4, 45)', 'R2 (45)', 'Miss Bacha (Ens4)', '11h:05-12h:45 (Se13)']\n",
+      "['3', 'INFO', 'POO (XC5, 45)', 'R1 (25)', 'Boutomi (Ens5)', '9h:35-11h00 (Se2)']\n",
+      "['4', 'INFO', 'IHM (XC6, 30)', 'R3 (35)', 'Boutomi (Ens5)', '8h:00-9h:30 (Se6)']\n",
+      "['5', 'Bio', 'TD_Algo (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '14h15-15h50 (Se20)']\n",
+      "['6', 'ST', 'algorithme (XC1, 25)', 'R1 (25)', 'Mr Cherif Zahar (Ens1)', '8h:00-9h:30 (Se6)']\n",
+      "\n",
+      "> Generation # 5\n",
+      "['1', 0.333, 2, 'INFO,XC2,R3,Ens2,Se14, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se2, INFO,XC6,R3,Ens5,Se6, Bio,XC3,R2,Ens3,Se20, ST,XC1,R1,Ens1,Se6']\n",
+      "['2', 0.333, 2, 'INFO,XC2,R3,Ens2,Se14, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se2, INFO,XC6,R3,Ens5,Se6, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se14']\n",
+      "['3', 0.333, 2, 'INFO,XC2,R1,Ens2,Se22, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R2,Ens5,Se11, INFO,XC6,R3,Ens5,Se6, Bio,XC3,R2,Ens3,Se20, ST,XC1,R1,Ens1,Se6']\n",
+      "['4', 0.333, 2, 'INFO,XC2,R3,Ens2,Se21, INFO,XC4,R3,Ens4,Se9, INFO,XC5,R2,Ens5,Se7, INFO,XC6,R1,Ens5,Se16, Bio,XC3,R3,Ens3,Se2, ST,XC1,R1,Ens1,Se1']\n",
+      "['5', 0.333, 2, 'INFO,XC2,R3,Ens2,Se14, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R2,Ens5,Se7, INFO,XC6,R1,Ens5,Se16, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se14']\n",
+      "['6', 0.25, 3, 'INFO,XC2,R3,Ens2,Se14, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R2,Ens5,Se7, INFO,XC6,R1,Ens5,Se16, Bio,XC3,R2,Ens3,Se20, ST,XC1,R1,Ens1,Se14']\n",
+      "['7', 0.25, 3, 'INFO,XC2,R3,Ens2,Se16, INFO,XC4,R3,Ens4,Se9, INFO,XC5,R2,Ens5,Se7, INFO,XC6,R1,Ens5,Se16, Bio,XC3,R2,Ens3,Se5, ST,XC1,R1,Ens1,Se13']\n",
+      "['8', 0.25, 3, 'INFO,XC2,R3,Ens2,Se3, INFO,XC4,R2,Ens4,Se3, INFO,XC5,R3,Ens5,Se1, INFO,XC6,R1,Ens5,Se16, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se13']\n",
+      "['9', 0.25, 3, 'INFO,XC2,R3,Ens2,Se9, INFO,XC4,R3,Ens4,Se9, INFO,XC5,R2,Ens5,Se7, INFO,XC6,R1,Ens5,Se16, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se6']\n",
+      "['1', 'INFO', 'TD_AI (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '13h:00-14h15 (Se14)']\n",
+      "['2', 'INFO', 'IA (XC4, 45)', 'R2 (45)', 'Miss Bacha (Ens4)', '11h:05-12h:45 (Se13)']\n",
+      "['3', 'INFO', 'POO (XC5, 45)', 'R1 (25)', 'Boutomi (Ens5)', '9h:35-11h00 (Se2)']\n",
+      "['4', 'INFO', 'IHM (XC6, 30)', 'R3 (35)', 'Boutomi (Ens5)', '8h:00-9h:30 (Se6)']\n",
+      "['5', 'Bio', 'TD_Algo (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '14h15-15h50 (Se20)']\n",
+      "['6', 'ST', 'algorithme (XC1, 25)', 'R1 (25)', 'Mr Cherif Zahar (Ens1)', '8h:00-9h:30 (Se6)']\n",
+      "\n",
+      "> Generation # 6\n",
+      "['1', 1.0, 0, 'INFO,XC2,R3,Ens2,Se14, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R2,Ens5,Se11, INFO,XC6,R3,Ens5,Se6, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se6']\n",
+      "['2', 0.5, 1, 'INFO,XC2,R3,Ens2,Se21, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R2,Ens5,Se7, INFO,XC6,R1,Ens5,Se16, Bio,XC3,R3,Ens3,Se2, ST,XC1,R1,Ens1,Se1']\n",
+      "['3', 0.333, 2, 'INFO,XC2,R3,Ens2,Se14, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se2, INFO,XC6,R3,Ens5,Se6, Bio,XC3,R2,Ens3,Se20, ST,XC1,R1,Ens1,Se6']\n",
+      "['4', 0.333, 2, 'INFO,XC2,R3,Ens2,Se14, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se2, INFO,XC6,R3,Ens5,Se6, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se14']\n",
+      "['5', 0.333, 2, 'INFO,XC2,R2,Ens2,Se2, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R2,Ens5,Se7, INFO,XC6,R1,Ens5,Se16, Bio,XC3,R2,Ens3,Se3, ST,XC1,R1,Ens1,Se14']\n",
+      "['6', 0.333, 2, 'INFO,XC2,R3,Ens2,Se14, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se2, INFO,XC6,R3,Ens5,Se6, Bio,XC3,R2,Ens3,Se20, ST,XC1,R1,Ens1,Se6']\n",
+      "['7', 0.333, 2, 'INFO,XC2,R3,Ens2,Se14, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R1,Ens5,Se2, INFO,XC6,R3,Ens5,Se6, Bio,XC3,R2,Ens3,Se20, ST,XC1,R2,Ens1,Se22']\n",
+      "['8', 0.25, 3, 'INFO,XC2,R3,Ens2,Se9, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R2,Ens5,Se7, INFO,XC6,R1,Ens5,Se15, Bio,XC3,R2,Ens3,Se20, ST,XC1,R3,Ens1,Se24']\n",
+      "['9', 0.143, 6, 'INFO,XC2,R3,Ens2,Se14, INFO,XC4,R2,Ens4,Se13, INFO,XC5,R3,Ens5,Se24, INFO,XC6,R1,Ens5,Se16, Bio,XC3,R1,Ens3,Se10, ST,XC1,R1,Ens1,Se14']\n",
+      "['1', 'INFO', 'TD_AI (XC2, 30)', 'R3 (35)', 'Mr Nahal (Ens2)', '13h:00-14h15 (Se14)']\n",
+      "['2', 'INFO', 'IA (XC4, 45)', 'R2 (45)', 'Miss Bacha (Ens4)', '11h:05-12h:45 (Se13)']\n",
+      "['3', 'INFO', 'POO (XC5, 45)', 'R2 (45)', 'Boutomi (Ens5)', '8h:00-9h:30 (Se11)']\n",
+      "['4', 'INFO', 'IHM (XC6, 30)', 'R3 (35)', 'Boutomi (Ens5)', '8h:00-9h:30 (Se6)']\n",
+      "['5', 'Bio', 'TD_Algo (XC3, 30)', 'R2 (45)', 'Mme Arroussi (Ens3)', '11h:05-12h:45 (Se3)']\n",
+      "['6', 'ST', 'algorithme (XC1, 25)', 'R1 (25)', 'Mr Cherif Zahar (Ens1)', '8h:00-9h:30 (Se6)']\n",
       "\n",
       "\n",
       "\n"
@@ -270,6 +366,41 @@
     "                self._numbOfConflicts += 1\n",
     "                \n",
     "                \n",
+    "            #contraint:pas plus de 2cour par jour\n",
+    "            #debut\n",
+    "            if (classes[i].get_meetingTime() in jour1 < classes[i].get_course().get_typeCour=='cour'):\n",
+    "                nbr_cour_j1 += 1\n",
+    "                if (nbr_cour_j1>2):\n",
+    "                    self._numbOfConflicts += 1\n",
+    "                    #fin\n",
+    "            #debut\n",
+    "            if (classes[i].get_meetingTime() in jour2 < classes[i].get_course().get_typeCour=='cour'):\n",
+    "                nbr_cour_j1 += 1\n",
+    "                if (nbr_cour_j2>2):\n",
+    "                    self._numbOfConflicts += 1\n",
+    "                    #fin\n",
+    "            #debut\n",
+    "            if (classes[i].get_meetingTime() in jour3 < classes[i].get_course().get_typeCour=='cour'):\n",
+    "                nbr_cour_j1 += 1\n",
+    "                if (nbr_cour_j3>2):\n",
+    "                    self._numbOfConflicts += 1\n",
+    "                    #fin\n",
+    "            #debut\n",
+    "            if (classes[i].get_meetingTime() in jour4 < classes[i].get_course().get_typeCour=='cour'):\n",
+    "                nbr_cour_j4 += 1\n",
+    "                if (nbr_cour_j1>2):\n",
+    "                    self._numbOfConflicts += 1\n",
+    "                    #fin\n",
+    "            #debut\n",
+    "            if (classes[i].get_meetingTime() in jour5 < classes[i].get_course().get_typeCour=='cour'):\n",
+    "                nbr_cour_j5 += 1\n",
+    "                if (nbr_cour_j5>2):\n",
+    "                    self._numbOfConflicts += 1\n",
+    "                    #fin\n",
+    " \n",
+    "                \n",
+    "                \n",
+    "            #contraint: cour/td fondamental matin seulment \n",
     "            if (classes[i].get_meetingTime().get_id()not in matin and classes[i].get_course().get_fondamental()==\"oui\"):\n",
     "                self._numbOfConflicts += 1            \n",
     "                \n",
